syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.example";
option java_outer_classname = "HelloServiceProto";

package com.example;

service HelloService {
  rpc sayHello (HelloRequest) returns (HelloResponse);
}

message HelloRequest {
  string client_name = 1;
}

message HelloResponse {
  string message = 1;
}
